name:                site
version:             1.0.0.0
homepage:            daoo.github.io
license:             BSD3
license-file:        LICENSE
author:              Daniel Oom
maintainer:          daoo314@gmail.com
copyright:           Daniel Oom 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  main-is:          Main.hs
  build-depends:    base, blaze-builder, blaze-html, bytestring, containers, clay, uri-encode
  default-language: Haskell2010
